# OpenSkyscraper

./: .flattener.toml  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CODING_STYLE_AUTOMATION.md  CONTRIBUTORS  README.md  TODO.md
.githooks/: commit-msg
.github/: COMMIT_TEMPLATE.md
.github/workflows/: build.yml
ci/: build_macosx.sh  ci_macosx.sh  ci_source.sh
data/: default.tower
data/Plugins/: AirJamaica.t2p  Aloha.t2p  Apartment.t2p  Aquazone.t2p  Attraction.t2p  BCDMart.t2p  Barber.t2p  BigElev.t2p  Billboard.t2p  Boatdeck.t2p  Bookstore.t2p  Boutique.t2p  Burger.t2p  Cathedral.t2p  Chinese.t2p  Cigar.t2p  ClassicTheater.t2p  Cocktail.t2p  Coffee.t2p  Coin.t2p  Condo.t2p  Convenience.t2p  Database  DefaultToolPalette.t2p  Doctor's.t2p  Drink.t2p  Drug.t2p  DutyFree.t2p  Electric.t2p  Escalator.t2p  EventCenter.t2p  FireDepartment.t2p  Floor.t2p  Flower.t2p  FoodCoat.t2p  French.t2p  Front.t2p  Fruits.t2p  GAMEWORKSAD.t2p  Gameworks.t2p  (+114 more)
data/debug/: condo.lua  package.lua  sprite_debug.lua
data/gui/: mainmenu.layout  map.rml  time.rml  toolbox.rml
doc/simtower/: TDT_format.txt  Used Resource Types.md  Windows NE Format.txt  Windows NE Resource Types.txt
doc/source/: Doxyfile
package/arch-linux/: .gitignore  PKGBUILD  sfml1.6.patch
source/: Application.cpp  Application.h  AutoPtr.h  BitmapManager.cpp  BitmapManager.h  DataManager.cpp  DataManager.h  Decorations.cpp  Decorations.h  ElevatorDialog.cpp  ElevatorDialog.h  Filesystem.cpp  Filesystem.h  FinanceWindow.cpp  FinanceWindow.h  FontManager.cpp  FontManager.h  GUI.cpp  GUI.h  GUIManager.cpp  GUIManager.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameStarTest.cpp  InspectorDialog.cpp  InspectorDialog.h  JudgeSystem.cpp  JudgeSystem.h  LevelUp.cpp  LevelUp.h  LevelUpDialog.cpp  LevelUpDialog.h  Lighting.cpp  Lighting.h  Logger.cpp  Logger.h  MainMenu.cpp  MainMenu.h  (+44 more)
source/GUI/: IGUI.h  TGUIBackend.cpp  TGUIBackend.h
source/Item/: Cathedral.cpp  Cathedral.h  Cinema.cpp  Cinema.h  Condo.cpp  Condo.h  Escalator.cpp  Escalator.h  Factory.cpp  Factory.h  FastFood.cpp  FastFood.h  Floor.cpp  Floor.h  Hotel.cpp  Hotel.h  Item.cpp  Item.h  Lobby.cpp  Lobby.h  MedicalCenter.cpp  MedicalCenter.h  Metro.cpp  Metro.h  Office.cpp  Office.h  Parking.cpp  Parking.h  PartyHall.cpp  PartyHall.h  Prototype.h  Recycling.cpp  Recycling.h  Restaurant.cpp  Restaurant.h  Security.cpp  Security.h  Stairlike.cpp  Stairlike.h  Stairs.cpp  (+3 more)
source/Item/Elevator/: Car.cpp  Car.h  Elevator.cpp  Elevator.h  Express.h  Queue.cpp  Queue.h  Service.h  Standard.h
source/Math/: Rand.cpp  Rand.h  Rect.h  Round.cpp  Round.h  Vector2D.h  clamp.cpp  clamp.h
source/PathFinder/: FloorNode.h  GameMap.cpp  GameMap.h  MapNode.cpp  MapNode.h  MapSearchNode.cpp  MapSearchNode.h  PathFinder.cpp  PathFinder.h
source/Rocket/: Renderer.cpp
tests/: test_main.cpp
